footer logo spacing issue fix

--- a/ui.frontend/src/main/webpack/fe-components/components/fe-footer/fe-footer.scss
+++ b/ui.frontend/src/main/webpack/fe-components/components/fe-footer/fe-footer.scss
@@ -77,6 +77,7 @@
     .footer {
         .cmp-image--efe-logo-secondary.cmp-image--small {
             margin-bottom: 0 !important;
+            height: auto !important;
         }
         * {
             font-family: var(--fe-footer-font-family);
